# 9-The-Final-Chapter

./: LICENSE  README.md
A Taste Of Magic (Technical Manilla)/: Wisdom Wheels (Version 1.0).docx
American Spring (Historical Memoir)/: manifest.txt
AstraTechnica (Final)/: ASTRATECHNICA_STRATEGY_GUIDE.md  AstraTechnica_document.txt  CMakeLists.txt  KARDASHEV_MAX_STRATEGY_GUIDE.md  README.md  astratechnica_kardashev_max.md  astratechnica_massive_enhancement_todo.md  astratechnica_todo.md  build_astratechnica.sh
AstraTechnica (Final)/astratechnica/: CMakeLists.txt  main.cpp
AstraTechnica (Final)/astratechnica/ai/: ai_system.cpp  ai_system.hpp
AstraTechnica (Final)/astratechnica/character/: character_system.hpp
AstraTechnica (Final)/astratechnica/core/: game_app.hpp  game_engine.cpp  game_engine.hpp  world_map.hpp
AstraTechnica (Final)/astratechnica/kardashev/: astratechnica_kardashev_max.cpp  kardashev_integration.cpp  kardashev_integration.hpp  kardashev_max_system.cpp  kardashev_max_system.hpp
AstraTechnica (Final)/astratechnica/phone/: phone_integration.cpp  phone_integration.hpp
AstraTechnica (WIP)/: ai_system.hpp  character_system.cpp  game_engine.hpp  phone_integration.cpp
Base 13 (Research Tote)/: BASE13_COMPREHENSIVE_DOCUMENT.tex  BASE13_FINAL_SUMMARY.md  BASE13_READER_GUIDE.md
Basso-Riello Trainer Pro (WIP)/: README.md  main.py  main_window.py  variant_training.py
Chainer (Final)/: app.py  comprehensive_test.py  educational_polish_document.md  enhancements_1000.py  final_project_summary.md  todo.md
Chainer (WIP)/: README.md  app.py  chainer_v2.py  requirements.txt
Composer (Research Tote)/: README.md  cstar_composition_analysis.json  hardness_entropy_analysis.json  (+15 more)
Farha (Final)/Version1_Basic/: CMakeLists.txt  README.md  build_farha.sh  farha_game.cpp  farha_game.hpp  farha_v1  main.cpp
Farha (Final)/Version2_Enhanced/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md  VERSION_COMPARISON.md  build_enhanced.sh  demo.sh  farha_enhanced.cpp  farha_enhanced.hpp  main.cpp
Farha (Final)/Version3_AllahInspired/: CMakeLists.txt  README.md  build_allah_inspired.sh  farha_allah_inspired.cpp  farha_allah_inspired.hpp  main.cpp
Farha (Final)/Version3_AllahInspired/build_allah_inspired/: CMakeCache.txt  Makefile  cmake_install.cmake  farha_v3
Kardashev Suite (Final)/Round1_Foundation/: CMakeLists.txt  README.md  kardashev_file_types.h
Kardashev Suite (Final)/Round2_Workshops/: CMakeLists.txt  README.md  kardashev_workshop_manager.h
Kardashev Suite (Final)/Round2_Workshops/CodeAnalysis/: kardashev_code_analyzer.h
Kardashev Suite (Final)/Round2_Workshops/DocumentationStandards/: kardashev_documentation_analyzer.h
Kardashev Suite (Final)/Round2_Workshops/HexEditor/: kardashev_hex_editor.h
Kardashev Suite (Final)/Round2_Workshops/PatternRecognition/: kardashev_pattern_recognizer.h
Kardashev Suite (Final)/Round2_Workshops/PerformanceMetrics/: kardashev_performance_analyzer.h
Plane Pilot (Final)/plane_pilot/: CMakeLists.txt  README.md  README_PACKAGE.txt  build.sh
Plane Pilot (Final)/plane_pilot/include/: PlanePilotApp.h
Plane Pilot (Final)/plane_pilot/include/graphics/: Renderer.h  Shader.h
Plane Pilot (Final)/plane_pilot/include/gui/: FontManager.h  MainWindow.h  SplashScreen.h  ThemeManager.h  WorkshopSelector.h
Plane Pilot (Final)/plane_pilot/include/utils/: Logger.h
Plane Pilot (Final)/plane_pilot/include/workshops/: ChromaticOlympics.h  GeometrySequencing.h  HadwigerNelsonWorkshop.h  SphereOMatic.h
Plane Pilot (Final)/plane_pilot/resources/: README.md
Plane Pilot (Final)/plane_pilot/src/: PlanePilotApp.cpp  main.cpp
Plane Pilot (Final)/plane_pilot/src/graphics/: Renderer.cpp  Shader.cpp
Plane Pilot (Final)/plane_pilot/src/gui/: FontManager.cpp  MainWindow.cpp  SplashScreen.cpp  ThemeManager.cpp  WorkshopSelector.cpp
Plane Pilot (Final)/plane_pilot/src/utils/: Logger.cpp
Plane Pilot (Final)/plane_pilot/src/workshops/: ChromaticOlympics.cpp  GeometrySequencing.cpp  HadwigerNelsonWorkshop.cpp  SphereOMatic.cpp
Privanna (Final)/Build_Scripts/: CMakeLists.txt
Privanna (Final)/Version1_Efficiency/: CMakeLists.txt  VERSION_SUMMARY.md
Privanna (Final)/Version2_Visual_Excellence/: CMakeLists.txt  VERSION_SUMMARY.md
Privanna (Final)/Version2_Visual_Excellence/src/render/: renderer_core.hpp
Privanna (Final)/Version2_Visual_Excellence/src/utils/: logger.hpp
Recipy (WIP)/: BigIdeasWorkshop.cpp  CMakeLists.txt  ColorfulPrinter.cpp  HelloNumbersWorkshop.cpp  HelloNumbersWorkshop.h  NumberSecretsWorkshop.cpp  PROGRESS_REPORT.md  PatternFindingWorkshop.cpp  README.md  RecipyApp.cpp  RecipyApp.h  SharingNumbersWorkshop.cpp  main.cpp
Recipy (WIP)/docs/: PROJECT_SUMMARY.md  Teacher_Guide.md
Recipy (WIP)/include/utils/: ColorfulPrinter.h
Recipy (WIP)/include/workshops/: BigIdeasWorkshop.h  InformationMagicWorkshop.h  LongNumberAdventuresWorkshop.h  NumberFamiliesWorkshop.h  NumberGamesWorkshop.h  NumberSecretsWorkshop.h  PatternFindingWorkshop.h  ShapeNumbersWorkshop.h  SharingNumbersWorkshop.h
Recipy (WIP)/src/: RecipyApp.cpp  main.cpp
Recipy (WIP)/src/workshops/: HelloNumbersWorkshop.cpp  InformationMagicWorkshop.cpp  LongNumberAdventuresWorkshop.cpp  NumberFamiliesWorkshop.cpp  NumberGamesWorkshop.cpp  ShapeNumbersWorkshop.cpp  SharingNumbersWorkshop.cpp
Seek-R Simulator (Final)/: CMakeLists.txt  README.md  SEEK_R_TECHNICAL_DOCUMENTATION.md  build_seek_r.sh  seek_r_main.cpp  wisdom_wheels_document.txt
Seek-R Simulator (Final)/seek_r_engine/: kardashev_quantum_renderer.cpp  kardashev_quantum_renderer.hpp  wisdom_wheels_transformer.cpp  wisdom_wheels_transformer.hpp
Sue Me/: letter.txt
The Dark Continent (Final)/game/: CMakeLists.txt  GameEngine.cpp  Player.h  game_design.md  game_simulation.cpp  main.cpp  todo.md
Unrh (Final)/: CMakeLists.txt  LICENSE  README.md  UNRH_Framework.md  UV_Mathematical_Story_Research.md
Unrh (Final)/cmake/: UNRHConfig.cmake.in
Unrh (Final)/include/unrh/: unrh_core.h
Unrh (Final)/src/: main.cpp  unrh_core.cpp
Unrh (Final)/tests/: optimization_test.cpp  performance_test.cpp
(+475 files in other folders)
